--- a/bem-express/common.blocks/grid/__card/_size/grid__card_size_m.css
+++ b/bem-express/common.blocks/grid/__card/_size/grid__card_size_m.css
@@ -8,3 +8,13 @@
     position: relative;
     padding-right: 30px;
 }
+.grid__card_size_m .card__actions {
+    right: 10px;
+    top: 0;
+    height: 100%;
+    width: 20px;
+    flex-direction: column;
+}
+.grid__card_size_m .card__actions .like {
+    margin: auto 0 0;
+}
